--- a/src/components/LearningWords/ViewCards.css
+++ b/src/components/LearningWords/ViewCards.css
@@ -12,7 +12,7 @@
 
 .card h4  {
     margin: 0;
-    color: black !important;
+    color: white !important;
 }
 
 .btn.again{
@@ -35,7 +35,11 @@
     color: white;
 }
 
-
+.card-wrapper{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 
 h1, h2, h3, h4{
     color: white !important;
